--- a/app/css/fateOfAllFoolsGlyphLogic.css
+++ b/app/css/fateOfAllFoolsGlyphLogic.css
@@ -85,18 +85,3 @@
 {
   display: none;
 }
-
-[data-fate-weapon-registered="false"] > .foaf-masterwork,
-[data-fate-weapon-pve="true"] > .foaf-masterwork,
-[data-fate-weapon-pvp="true"] > .foaf-masterwork,
-[data-fate-weapon-junk="true"] > .foaf-masterwork
-{
-  padding-left: 5px;
-  top: 17px;
-}
-
-[data-fate-weapon-dupe="true"] > .foaf-masterwork
-{
-  padding-left: 5px;
-  right: 20px;
-}
